# ConnectsCommonConnectivity

./: .gitignore  LICENSE  README.md  brain_regions.yaml  brain_regions_generic.yaml  pyproject.toml
.codeocean/: datasets.json  environment.json  secrets.json
code/: example_microns_query.ipynb  parse_minnie_clustering.ipynb  utils.py
docs/: schema_diagram.mmd
environment/: Dockerfile
examples/: dataset_manifest_example.yaml  etl_brain_regions.py  generate_and_use.py  projection_measurements_example.yaml
metadata/: metadata.yml
notebooks/: parse_minnie_clustering.ipynb
schemas/: base_schema.yaml  brain_region_schema.yaml  cell_cell_schema.yaml  cell_features_schema.yaml  cell_gene_schema.yaml  clustering_schema.yaml  connectivity_schema.yaml  core_schema.yaml  mappings_schema.yaml  measurement_schema.yaml  projection_schema.yaml  single_cell_schema.yaml  zarr_schema.yaml
scripts/: generate_models.sh
src/connects_common_connectivity/: __init__.py  arrow_utils.py  cli.py  models.py  parquet_loader.py
tests/: test_basic.py
