[project]
name = "connects-common-connectivity"
version = "0.1.0"
description = "Common connectivity data models and utilities (LinkML + Pydantic) for BRAIN CONNECTS pilot"
authors = [ { name = "Forrest Collman" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["connectivity", "neuroscience", "linkml", "pydantic"]
dependencies = [
  "caveclient>=7.11.1",
  "deltalake>=1.2.0",
  "jupyter>=1.1.1",
  "linkml>=1.7.0",
  "linkml-runtime>=1.9.5",
  "linkml-store>=0.2.11",
  "pandas>=2.3.3",
  "polars>=1.34.0",
  "pyarrow>=21.0.0",
  "pydantic>=2.6,<3",
  "pyyaml>=6.0",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/AllenInstitute/ConnectsCommonConnectivity"

[project.scripts]
ccc = "connects_common_connectivity.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
docs = [
  # Core linkml already in main deps; include tooling extensions for docs generation
  "mkdocs-material>=9.5.0",            # optional if you later adopt MkDocs site
  "griffe~=0.42.0",                    # optional: API doc extraction (remove if unneeded)
  "pyarrow>=15.0.0"                    # for inspecting/aligning Parquet sources
]

[dependency-groups]
# uv specific grouping (optional)
# You can activate extras via `uv pip install -e .[dev]`
docs = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
managed = true
